examples/test/testpolicy17551.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17551
  namespace: namespace353
spec:
  podSelector:
    matchLabels:
      key15: value16
      key44: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value28
          key0: value8
          key8: value41
      podSelector:
        matchLabels:
          key28: value49
          key21: value26
